--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,5 +117,5 @@ jobs:
 
         - name: Run docker containers
           run: |
-            docker compose -f ./docker-compose.yml up -d
+            docker compose -f ./docker-compose.yml up
             docker ps -a
