--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,6 +70,7 @@ jobs:
             echo STRIPE_KEY=${{ secrets.STRIPE_KEY }} >> .env
             echo WHSEC=${{ secrets.WHSEC }} >> .env
             npm run tester
+            exit
 
     dockerize:
       runs-on: ubuntu-latest
