--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,3 +55,33 @@ jobs:
           run: |
             docker compose -f ./docker-compose.yml up -d
             docker ps -a
+    
+    scan:
+      name: Analyze
+      runs-on: ubuntu-latest
+      permissions:
+        security-events: write
+        actions: read
+        contents: read
+
+      strategy:
+        fail-fast: false
+        matrix:
+          language: [ 'javascript' ]
+
+      steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: ${{ matrix.language }}
+
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
+
+      - name: Perform CodeQL Analysis
+      uses: github/codeql-action/analyze@v3
+      with:
+        category: "/language:${{matrix.language}}"
