--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-oauth/google": "^0.11.1",
+    "@reduxjs/toolkit": "^2.2.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -19,7 +20,6 @@
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.4",
-    "redux-toolkit": "^1.1.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
